codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui2/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Beacon Code to do anything                                                "
"                                                                                "
"  100% context left · ? for shortcuts                                           "
