codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__status_widget_active.snap
---
source: tui2/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Beacon Code to do anything                                                "
"                                                                                "
"  100% context left · ? for shortcuts                                           "
